# api/router.go
@@ -1,43 +1,39 @@
 package api
 
 import (
+	_ "Auth-Service/api/docs"
 	"Auth-Service/api/handlers"
 	"Auth-Service/api/middleware"
-	a "Auth-Service/genproto"
-  _ "Auth-Service/api/docs"
 
 	"github.com/gin-gonic/gin"
 	files "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
-	"google.golang.org/grpc"
 )
 
 // NewRouter @title API Service
 // @version 1.0
 // @description API service
-// @host localhost:8080
+// @host localhost:8081
 // @BasePath /
 // @securityDefinitions.apikey BearerAuth
 // @in header
 // @name Authorization
-func NewRouter(conn *grpc.ClientConn) *gin.Engine {
-  r := gin.Default()
-  r.GET("/swagger/*any", ginSwagger.WrapHandler(files.Handler))
+func NewRouter(handler *handlers.Handler) *gin.Engine {
+	r := gin.Default()
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(files.Handler))
 
-  // Initialize gRPC client for UserService
-  userService := a.NewUserServiceClient(conn)
-  handler := handlers.Handler{UsersService: userService}
+	// API routes
+	user := r.Group("/user")
+	{
+		user.POST("/register", handler.Register)
+		user.POST("/login", handler.Login)
+	}
+	auth := r.Group("/user")
+	auth.Use(middleware.AuthMiddleware())
+	{
+		auth.POST("/refresh-token", handler.RefreshToken)
+		auth.POST("/logout", handler.Logout)
+	}
 
-  // API routes
-  auth := r.Group("/")
-  auth.Use(middleware.AuthMiddleware())
-  {
-    auth.POST("/register", handler.Register)
-    auth.GET("/profile", handler.Profile)
-    auth.PUT("/update-profile", handler.UpdateProfile)
-    auth.POST("/refresh-token", handler.RefreshToken)
-    auth.POST("/logout", handler.Logout)
-  }
-
-  return r
+	return r
 }
